Update TeX slides

--- a/intro-to-tex/index.html
+++ b/intro-to-tex/index.html
@@ -277,10 +277,8 @@
     <!-- <div class="logo"></div> -->
     <div class=""></div>
     <blockquote>
-      <p>
-      DEMO
-      </p>
-      <hr />
+    <a href="https://github.com/nelsonmestevao/intro-to-tex/tree/master/demo">DEMO</a>
+    <hr />
     </blockquote>
   </div>
 </section>
